examples/fail/conditional.miniml
let f = if 1 < 0 then true ;; (* missing else *)